--- a/getFilterjs.ipynb
+++ b/getFilterjs.ipynb
@@ -187,6 +187,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "student_array_name = \"studset\"\n",
+    "timetable_ids = re.findall(rf\"{student_array_name}array\\[[0-9]*\\] \\[[2]\\] = \\\"([a-zA-Z0-9\\-\\ \\&\\#\\%]+)\\\"\", filterJS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timetable_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(timetable_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(set(timetable_ids))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
