--- a/getTimetable.ipynb
+++ b/getTimetable.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table_iter = iter(tables)"
+    "timetable_days = tables[1:6]"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(table_iter)"
+    "timetable_days"
    ]
   },
   {
@@ -87,7 +87,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(table_iter)"
+    "timetable_days[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(timetable_days[0].find_all(\"tr\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modules = timetable_days[0]\n",
+    "module = modules.find_all(\"tr\")[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "module"
    ]
   },
   {
