Matching up day names with module day

--- a/getTimetable.ipynb
+++ b/getTimetable.ipynb
@@ -105,8 +105,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modules = timetable_days[0]\n",
-    "module = modules.find_all(\"tr\")[1:]"
+    "monday = timetable_days[0]\n",
+    "modules = monday.find_all(\"tr\")[1:]"
    ]
   },
   {
@@ -115,7 +115,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "module"
+    "modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "days = [p.find(\"span\").string for p in body.find_all(\"p\", recursive=False)]\n",
+    "days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import requests\n",
+    "timetable_url = \"http://timetable.itcarlow.ie/reporting/textspreadsheet;student+set;id;KCSOFD_3A%20CW207%20C3%0D%0A?t=student+set+textspreadsheet&days=1-5&weeks=&periods=5-40&template=student+set+textspreadsheet\"\n",
+    "timetable_html = requests.get(timetable_url)\n",
+    "\n",
+    "timetable_soup = BeautifulSoup(timetable_html.text)\n",
+    "body = timetable_soup.find(\"body\")\n",
+    "days = [p.find(\"span\").string for p in body.find_all(\"p\", recursive=False)]\n",
+    "tables = body.findChildren(\"table\", recursive=False)\n",
+    "timetable_days = tables[1:6]\n",
+    "\n",
+    "for day, modules in zip(days, timetable_days):\n",
+    "\tmodules = modules.find_all(\"tr\")[1:]\n",
+    "\tprint(f\"{day}: {modules}\")"
    ]
   },
   {
@@ -128,7 +160,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.10.7 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +179,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "beedbe2faf2f7048d727558d0bc3221e7eba2a0b921cac4d4771b2feb8f74b30"
+    "hash": "8bf0d51478355d2251941b3b98616086516a0eddd7c72ee47a3371765770709a"
    }
   }
  },
