Able to get module info

--- a/getTimetable.ipynb
+++ b/getTimetable.ipynb
@@ -147,7 +147,11 @@
     "\n",
     "for day, modules in zip(days, timetable_days):\n",
     "\tmodules = modules.find_all(\"tr\")[1:]\n",
-    "\tprint(f\"{day}: {modules}\")"
+    "\tprint(f\"{day}:\")\n",
+    "\tfor module in modules:\n",
+    "\t\tmodule_activity, module_name, module_type, module_start, module_end, module_duration, module_weeks, module_room, module_staff, module_student_groups = (module_info.string for module_info in module.find_all(\"td\"))\n",
+    "\t\tprint(module_activity, module_name, module_type, module_start, module_end, module_duration, module_weeks, module_room)\n",
+    "\tprint(\"-------------------------------\")"
    ]
   },
   {
