--- a/getFilterjs.ipynb
+++ b/getFilterjs.ipynb
@@ -229,7 +229,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.10.7 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -248,7 +248,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "beedbe2faf2f7048d727558d0bc3221e7eba2a0b921cac4d4771b2feb8f74b30"
+    "hash": "8bf0d51478355d2251941b3b98616086516a0eddd7c72ee47a3371765770709a"
    }
   }
  },
