JSON layout for database

--- a/getTimetable.ipynb
+++ b/getTimetable.ipynb
@@ -150,7 +150,7 @@
     "\tprint(f\"{day}:\")\n",
     "\tfor module in modules:\n",
     "\t\tmodule_activity, module_name, module_type, module_start, module_end, module_duration, module_weeks, module_room, module_staff, module_student_groups = (module_info.string for module_info in module.find_all(\"td\"))\n",
-    "\t\tprint(module_activity, module_name, module_type, module_start, module_end, module_duration, module_weeks, module_room)\n",
+    "\t\tprint(f\"{module_activity}, {module_name}, {module_type}, {module_start}, {module_end}, {module_duration}, W:{module_weeks}, R:{module_room}, {module_staff}, {module_student_groups}\")\n",
     "\tprint(\"-------------------------------\")"
    ]
   },
