Added more info about project

--- a/getTimetable.ipynb
+++ b/getTimetable.ipynb
@@ -143,7 +143,7 @@
     "body = timetable_soup.find(\"body\")\n",
     "days = [p.find(\"span\").string for p in body.find_all(\"p\", recursive=False)]\n",
     "tables = body.findChildren(\"table\", recursive=False)\n",
-    "timetable_days = tables[1:6]\n",
+    "timetable_days = tables[1:-1]\n",
     "\n",
     "for day, modules in zip(days, timetable_days):\n",
     "\tmodules = modules.find_all(\"tr\")[1:]\n",
