Made Timetable screenshot & Separated json & screenshot functions

--- a/screenshot.ipynb
+++ b/screenshot.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyppeteer import launch\n"
+    "from pyppeteer import launch"
    ]
   },
   {
@@ -16,10 +16,10 @@
    "outputs": [],
    "source": [
     "browser = await launch(headless=True)\n",
-    "with await browser.newPage() as page:\n",
-    "    await page.goto('http://timetable.itcarlow.ie/reporting/individual;student+set;id;KCSOFD_3A%20CW207%20C3%0D%0A?t=student+set+individual&days=1-5&weeks=&periods=5-40&template=student+set+individual')\n",
-    "    await page.screenshot({'path': 'screen.png', 'fullPage': True})\n",
-    "    await browser.close()"
+    "page = await browser.newPage()\n",
+    "await page.goto('http://timetable.itcarlow.ie/reporting/individual;student+set;id;KCSOFD_3A%20CW207%20C3%0D%0A?t=student+set+individual&days=1-5&weeks=&periods=5-40&template=student+set+individual')\n",
+    "await page.screenshot({'path': 'screen.png', 'fullPage': True})\n",
+    "await browser.close()"
    ]
   },
   {
