--- a/getFilterjs.ipynb
+++ b/getFilterjs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,6 +217,35 @@
    "outputs": [],
    "source": [
     "len(set(timetable_ids))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "timetable_key_name = \"studset\"\n",
+    "timetable_names = re.findall(\n",
+    "    rf\"{timetable_key_name}array\\[[0-9]*\\] \\[[0]\\] = \\\"([a-zA-Z0-9\\-\\ \\&\\#\\%_\\(\\)\\/\\-\\,\\.]+)\\\"\",\n",
+    "    filterJS,\n",
+    ")\n",
+    "print(len(timetable_names))\n",
+    "timetable_values = re.findall(\n",
+    "    rf\"{timetable_key_name}array\\[[0-9]*\\] \\[[2]\\] = \\\"([a-zA-Z0-9\\-\\ \\&\\#\\%_\\(\\)\\/\\-\\,\\.]+)\\\"\",\n",
+    "    filterJS,\n",
+    ")\n",
+    "print(len(timetable_values))"
    ]
   },
   {
