Bot now uploads json file instead of multiple messages

--- a/screenshot.ipynb
+++ b/screenshot.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyppeteer import launch"
+    "from pyppeteer import launch\n",
+    "import time\n"
    ]
   },
   {
@@ -15,11 +16,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "browser = await launch(headless=True)\n",
-    "page = await browser.newPage()\n",
-    "await page.goto('http://timetable.itcarlow.ie/reporting/individual;student+set;id;KCSOFD_3A%20CW207%20C3%0D%0A?t=student+set+individual&days=1-5&weeks=&periods=5-40&template=student+set+individual')\n",
-    "await page.screenshot({'path': 'screen.png', 'fullPage': True})\n",
-    "await browser.close()"
+    "amount = 40\n",
+    "total = 0\n",
+    "for i in range(amount):\n",
+    "    now = time.time()\n",
+    "    browser = await launch(headless=True)\n",
+    "    page = await browser.newPage()\n",
+    "    await page.goto('http://timetable.itcarlow.ie/reporting/individual;student+set;id;KCSOFD_3A%20CW207%20C3%0D%0A?t=student+set+individual&days=1-5&weeks=&periods=5-40&template=student+set+individual')\n",
+    "    await page.screenshot({'path': 'screen.png', 'fullPage': True})\n",
+    "    await browser.close()\n",
+    "    after = time.time() - now\n",
+    "    total += after\n",
+    "print(total / amount)"
    ]
   },
   {
